# shared-infrastructure

./: README.md  neo4j_learning_schema.cypher  pyproject.toml
data4seo/: __init__.py  client.py  models.py
scripts/: verify_all.py
tests/: __init__.py  test_data4seo.py
