[project]
name = "lucidate-shared"
version = "0.1.0"
description = "Shared infrastructure for Horizon and LuciCRM"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Richard Walker", email = "richard.walker@lucidate.co.uk" }
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data4seo"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
